--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 
 sketch_08_mollat_template/data/_exports
 sketch_08_mollat_template/data/faceId.json
+sketch_08_mollat_template/data/settings.json
+sketch_08_mollat_template/data/tools.json
